правка для автотестов

--- a/styles/style.css
+++ b/styles/style.css
@@ -39,9 +39,10 @@ ol {
 
 .content {
   display: flex;
-  margin: 0 auto;
+  align-items: flex-end;
+  margin: auto 0;
   gap: 30px;
-  padding: 133px 30px;
+  padding: 133px 30px 0;
 }
 
 .result {
