--- a/styles/style.css
+++ b/styles/style.css
@@ -150,6 +150,7 @@ ol {
 }
 
 .search-form__pseudo-checkbox {
+  display: block;
   width: 19px;
   height: 19px;
   border: 1px solid #fff;
@@ -158,8 +159,8 @@ ol {
 }
 
 .search-form__checkbox:checked + .search-form__pseudo-checkbox::after {
-  content: "";
-  position: absolute;
+  content: '';
+  display: block;
   background-color: #fff;
   width: 15px;
   height: 15px;
@@ -295,4 +296,3 @@ ol {
   width: 100%;
   height: 100%;
 }
-
