--- a/styles/style.css
+++ b/styles/style.css
@@ -11,7 +11,6 @@ html {
 .page {
   display: flex;
   align-items: center;
-  justify-content: flex-end;
   inline-size: 1200px;
   block-size: 100%;
   margin: auto;
@@ -45,7 +44,7 @@ ol {
   align-items: flex-end;
   margin: auto 0;
   gap: 30px;
-  margin: 133px 30px 0;
+  padding: 0 30px;
 }
 
 .result {
@@ -65,6 +64,7 @@ ol {
   height: 100%;
   margin: 0 auto;
   object-fit: cover;
+  object-position: center;
 }
 
 .search-form {
@@ -86,7 +86,6 @@ ol {
   font-weight: 400;
   font-size: 18px;
   line-height: 21.6px;
-  margin-bottom: 5px;
 }
 
 .visually-hidden {
@@ -101,11 +100,12 @@ ol {
 
 .search-form__label {
   display: flex;
+  align-items: center;
   cursor: pointer;
 }
 
-.search-form__label:hover {
-  text-decoration: underline 1px #fff;
+.search-form__label .search-form__label-text:hover {
+  text-decoration: underline 1px currentColor;
   text-underline-offset: 5px;
 }
 
@@ -119,9 +119,9 @@ ol {
   background-color: transparent;
   width: 225px;
   height: 27px;
-  border-top: 1px solid #fff;
-  border-bottom: 1px solid #fff;
-  color: #fff;
+  border-top: 1px solid currentColor;
+  border-bottom: 1px solid currentColor;
+  color: currentColor;
 }
 
 .search-form__textfield::placeholder {
@@ -131,17 +131,18 @@ ol {
   color: rgba(255, 255, 255, 0.7);
 }
 
-.search-form__textfield:focus-visible {
-  outline: none;
+.search-form__label:has(:focus-visible) {
+  outline: 1px solid currentColor;
+  outline-offset: 1px;
 }
 
 .search-form__textfield:focus {
-  outline: 1px solid #fff;
+  outline: 1px solid currentColor;
   margin: 1px, 0px, 1px, 0px;
 }
 
 .search-form__textfield:active {
-  border: 1px solid #fff;
+  border: 1px solid currentColor;
 }
 
 .search-form__checkbox-list {
@@ -153,7 +154,7 @@ ol {
   display: block;
   width: 19px;
   height: 19px;
-  border: 1px solid #fff;
+  border: 1px solid currentColor;
   margin-right: 5px;
   cursor: pointer;
 }
@@ -161,7 +162,7 @@ ol {
 .search-form__checkbox:checked + .search-form__pseudo-checkbox::after {
   content: '';
   display: block;
-  background-color: #fff;
+  background-color: currentColor;
   width: 15px;
   height: 15px;
   margin: 1px 0 0 1px;
@@ -176,7 +177,7 @@ ol {
 }
 
 .title {
-  font-family: Oswald;
+  font-family: 'Oswald', sans-serif;
   font-weight: 700;
   font-size: 75px;
   line-height: 70.5px;
@@ -189,17 +190,15 @@ ol {
 
 .content__list {
   position: relative;
-  padding: 2px;
   z-index: 1;
   display: flex;
   flex-direction: column;
-  gap: 30px;
   height: 298px;
   overflow: auto;
 }
 
 .button {
-  border: 1px solid #fff;
+  border: 1px solid currentColor;
   padding: 10px 65px;
   color: #fff;
   font-family: inherit;
@@ -226,17 +225,18 @@ ol {
 }
 
 .button:hover {
-  text-decoration: underline 1px #fff;
+  text-decoration: underline 1px currentColor;
 }
 
 .button:focus {
-  outline: 1px solid #fff;
+  outline: 1px solid currentColor;
   outline-offset: 1px;
 }
 
 .content__card-link {
+  display: block;
   text-decoration: none;
-  color: #fff;
+  color: currentColor;
 }
 
 .content__card-link:focus-visible {
@@ -244,16 +244,16 @@ ol {
   margin: 2px 2px;
 }
 
-.content__video-card:focus {
-  outline: 1px solid #fff;
+.content__card-link:focus {
+  outline: 1px solid currentColor;
 }
 
-.content__video-card:hover {
-  text-decoration: underline 1px #fff;
+.content__card-link:hover {
+  text-decoration: underline 1px currentColor;
   outline: 6px;
 }
 
-.content__video-card:active {
+.content__card-link:active {
   background-color: #545050;
 }
 
@@ -263,14 +263,18 @@ ol {
 
 .content__video-card {
   display: flex;
-  flex-direction: row;
+  justify-content: space-between;
   flex-wrap: nowrap;
-  align-items: start;
 }
 
 .content__video-card-title {
+  width: 200px;
+  padding-left: 2px;
   text-transform: uppercase;
-  font-family: Oswald;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  font-family: 'Oswald', sans-serif;
   font-weight: 700;
   font-size: 30px;
   line-height: 30px;
@@ -278,6 +282,7 @@ ol {
 
 .content__video-card-description {
   margin-top: 6px;
+  padding-left: 3px;
   font-weight: 400;
   font-size: 18px;
   line-height: 16.2px;
